--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Características</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="caracteristicas.html">Características</a></li>
             <li><a href="comprar.html">Comprar</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
