--- a/contacto.html
+++ b/contacto.html
@@ -49,6 +49,6 @@
         <p>También puedes llamarnos al: <strong>+34 123 456 789</strong></p>
         <p>O visítanos en nuestra oficina en: <strong>[Tu Dirección Aquí]</strong></p>
     </div>
-    <p style="text-align: center; margin-top: 20px;"><a href="mi_pagina.html">Volver a la página principal</a></p>
+    <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a la página principal</a></p>
 </body>
 </html>
