--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Mi Producto Impresionante</title>
+    <title>Contacto - VozALetra™</title>
     <style>
         body {
             font-family: 'Open Sans', sans-serif;
@@ -45,9 +45,9 @@
     <h1>¡Contáctanos!</h1>
     <div class="contact-info">
         <p>Si tienes alguna pregunta o necesitas más información sobre nuestro increíble producto, no dudes en ponerte en contacto con nosotros.</p>
-        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:info@tuproducto.com">info@tuproducto.com</a></strong></p>
+        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:info@tuproducto.com">VozALetra@support.com</a></strong></p>
         <p>También puedes llamarnos al: <strong>+34 123 456 789</strong></p>
-        <p>O visítanos en nuestra oficina en: <strong>[Tu Dirección Aquí]</strong></p>
+        <p>O visítanos en nuestra oficina en: <strong>Calle Larios 1</strong></p>
     </div>
     <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a la página principal</a></p>
 </body>
