--- a/contacto.html
+++ b/contacto.html
@@ -47,8 +47,8 @@
         <p>Si tienes alguna pregunta o necesitas más información sobre nuestro increíble producto, no dudes en ponerte en contacto con nosotros.</p>
         <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:info@tuproducto.com">VozALetra@support.com</a></strong></p>
         <p>También puedes llamarnos al: <strong>+34 123 456 789</strong></p>
-        <p>O visítanos en nuestra oficina en: <strong>Calle Larios 1</strong></p>
+        <p>O visítanos en nuestra oficina en: <strong>Calle Larios 12</strong></p>
     </div>
-    <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a la página principal</a></p>
+    <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a inicio</a></p>
 </body>
 </html>
