--- a/comprar.html
+++ b/comprar.html
@@ -180,7 +180,7 @@
             </div>
             <button type="submit" style="display: none;">Finalizar Pedido</button> </form>
     </div>
-    <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a la página principal</a></p>
+    <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a inicio</a></p>
 
     <script>
         function mostrarPago() {
