--- a/contacto.html
+++ b/contacto.html
@@ -45,8 +45,8 @@
     <h1>¡Contáctanos!</h1>
     <div class="contact-info">
         <p>Si tienes alguna pregunta o necesitas más información sobre nuestro increíble producto, no dudes en ponerte en contacto con nosotros.</p>
-        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:info@tuproducto.com">VozALetra@support.com</a></strong></p>
-        <p>También puedes llamarnos al: <strong>+34 123 456 789</strong></p>
+        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:VozALetra@support.com<">VozALetra@support.com</a></strong></p>
+        <p>También puedes llamarnos al: <strong>+34 697 95 23 56</strong></p>
         <p>O visítanos en nuestra oficina en: <strong>Calle Larios 12</strong></p>
     </div>
     <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a inicio</a></p>
