--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="hero-overlay">
             <h1>VozALetra Silver Pro</h1>
             <div>
-                <a href="comprar.html" class="cta-button">¡Compra Ahora!</a>
+                <a href="comprar.html?opcion=silver_pro" class="cta-button">¡Compra Ahora!</a>
             </div>
         </div>
     </div>
@@ -253,7 +253,7 @@
             </div>
             <div class="product-card">
                 <img src="tintas_recambio.jpg" alt="Tintas de Recambio VozALetra Silver Pro">
-                <h3>Tintas de Recambio (Pack de 3)</h3>
+                <h3>Tintas de Recambio        (Pack de 3)</h3>
                 <p>Asegura un flujo continuo de tus transcripciones con nuestro pack de tintas de recambio originales.</p>
                 <a href="comprar.html?opcion=tintas">Comprar Ahora</a>
             </div>
