--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
             </div>
             <div class="product-card">
                 <img src="tintas_recambio.jpg" alt="Tintas de Recambio VozALetra Silver Pro">
-                <h3>Tintas de Recambio        (Pack de 3)</h3>
+                <h3>Tintas de Recambio 
+                      (Pack de 3)</h3>
                 <p>Asegura un flujo continuo de tus transcripciones con nuestro pack de tintas de recambio originales.</p>
                 <a href="comprar.html?opcion=tintas">Comprar Ahora</a>
             </div>
