--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
                 <a href="comprar.html?opcion=silver_pro">Comprar Ahora</a>
             </div>
             <div class="product-card">
-                <img src="funda_lapiz.jpg" alt="Funda Protectora VozALetra Silver Pro">
+                <img src="funda_lapiz.jpg">
                 <h3>Funda Protectora</h3>
                 <p>Protege tu VozALetra Silver Pro con esta funda elegante y resistente.</p>
                 <a href="comprar.html?opcion=funda">Comprar Ahora</a>
             </div>
             <div class="product-card">
-                <img src="tintas_recambio.jpg" alt="Tintas de Recambio VozALetra Silver Pro">
+                <img src="tintas_recambio.jpg">
                 <h3>Tintas de Recambio
                     (Pack de 3)</h3>
                 <p>Asegura un flujo continuo de tus transcripciones con nuestro pack de tintas de recambio originales.</p>
