--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <a href="comprar.html?opcion=silver_pro">Comprar Ahora</a>
             </div>
             <div class="product-card">
-                <img src="funda_lapiz.jpg">
+                <img src="funda_lapiz.jpg" style="display: none;>
                 <h3>Funda Protectora</h3>
                 <p>Protege tu VozALetra Silver Pro con esta funda elegante y resistente.</p>
                 <a href="comprar.html?opcion=funda">Comprar Ahora</a>
