--- a/comprar.html
+++ b/comprar.html
@@ -218,7 +218,7 @@
             opcionNombreSpan.textContent = opcion.charAt(0).toUpperCase() + opcion.slice(1).replace('_', ' '); // Mejora la visualización del nombre
             // Aquí determinamos la imagen a mostrar según la opción
             if (opcion === 'silver_pro') {
-                productImage.src = 'lapiz_silver_pro.jpg'; // Ruta a la imagen del Silver Pro
+                productImage.src = 'lapiz_silver_pro_fondo.jpg'; // Ruta a la imagen del Silver Pro
             } else if (opcion === 'funda') {
                 productImage.src = 'funda_lapiz.jpg'; // Ruta a la imagen de la funda
             } else if (opcion === 'tintas') {
