--- a/contacto.html
+++ b/contacto.html
@@ -28,9 +28,17 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             max-width: 600px;
             margin: 0 auto;
+            text-align: center; /* Centramos la imagen debajo */
         }
         .contact-info p strong {
             font-weight: bold;
+        }
+        .store-image {
+            max-width: 100%; /* La imagen no excederá el ancho del contenedor */
+            height: auto;
+            margin-top: 20px; /* Espacio entre el texto y la imagen */
+            border-radius: 8px; /* Opcional: bordes redondeados */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Opcional: sombra */
         }
         a {
             color: #e67e22;
@@ -45,10 +53,10 @@
     <h1>¡Contáctanos!</h1>
     <div class="contact-info">
         <p>Si tienes alguna pregunta o necesitas más información sobre nuestro increíble producto, no dudes en ponerte en contacto con nosotros.</p>
-        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:VozALetra@support.com<">VozALetra@support.com</a></strong></p>
+        <p>Puedes enviarnos un correo electrónico a: <strong><a href="mailto:VozALetra@support.com">VozALetra@support.com</a></strong></p>
         <p>También puedes llamarnos al: <strong>+34 697 95 23 56</strong></p>
         <p>O visítanos en nuestra oficina en: <strong>Calle Larios 12</strong></p>
-    </div>
+        <img src="tienda_malaga.jpg" alt="Tienda en Málaga" class="store-image"> </div>
     <p style="text-align: center; margin-top: 20px;"><a href="index.html">Volver a inicio</a></p>
 </body>
 </html>
