--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="caracteristicas.html">Características</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="redes_sociales.html">Redes Sociales</a></li>
         </ul>
     </nav>
 
