--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             <li><a href="caracteristicas.html">Características</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="redes_sociales.html">Redes Sociales</a></li>
+            <li><a href="sobre_nosotros.html">Sobre Nosotros</a></li>
         </ul>
     </nav>
 
